# bmi-fortran

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  LICENSE  README.md  bmi.f90  bmif.pc.cmake  fpm.toml
.bmi/: api.yaml  heat.cfg.tmpl  info.yaml  parameters.yaml
.ci/travis/: update_rpaths.sh
.github/workflows/: test.yml
bmi/: CMakeLists.txt  README.md  bmi.f90  bmif.pc.cmake
heat/: CMakeLists.txt  README.md  bmi_heat.f90  bmi_main.f90  heat.f90  heatf.pc.cmake  main.f90
heat/examples/: CMakeLists.txt  change_diffusivity_ex.f90  conflicting_instances_ex.f90  conflicting_instances_test.f90  get_value_ex.f90  info_ex.f90  irf_ex.f90  irf_test.f90  set_value_ex.f90  set_value_test.f90  test1.cfg  test2.cfg  testing_helpers.f90  vargrid_ex.f90
heat/test/: test_get_var_itemsize.f90
heat/tests/: CMakeLists.txt  fixtures.f90  test_by_reference.f90  test_finalize.f90  test_get_component_name.f90  test_get_current_time.f90  test_get_end_time.f90  test_get_grid_connectivity.f90  test_get_grid_offset.f90  test_get_grid_origin.f90  test_get_grid_rank.f90  test_get_grid_shape.f90  test_get_grid_size.f90  test_get_grid_spacing.f90  test_get_grid_type.f90  test_get_grid_x.f90  test_get_grid_y.f90  test_get_grid_z.f90  test_get_input_var_names.f90  test_get_output_var_names.f90  test_get_start_time.f90  test_get_time_step.f90  test_get_time_units.f90  test_get_value.f90  test_get_value_at_indices.f90  test_get_value_ptr.f90  test_get_value_ref.f90  test_get_var_grid.f90  test_get_var_itemsize.f90  test_get_var_nbytes.f90  test_get_var_type.f90  test_get_var_units.f90  test_initialize.f90  test_set_value.f90  test_set_value_at_indices.f90  test_update.f90  test_update_frac.f90  test_update_until.f90
recipe/: build.sh  meta.yaml
scripts/: update_rpaths.sh
testing/: CMakeLists.txt  get_value_test.f90  info_test.f90  irf_test.f90  vargrid_test.f90
